[gd_scene load_steps=6 format=3 uid="uid://djf2mb8cp5bdf"]

[ext_resource type="Script" path="res://Scripts/falling_obstacles.gd" id="1_dkba5"]
[ext_resource type="Texture2D" uid="uid://b3frjfxvhhhtm" path="res://Assets/Sprites/Interactive/kamiennaglowe.png" id="2_vhv77"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnb3r"]
size = Vector2(45.5, 235.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsxb8"]
size = Vector2(156, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pda8s"]
size = Vector2(156, 96)

[node name="FallingObstacles" type="StaticBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_dkba5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_vhv77")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(-1136, 189)
shape = SubResource("RectangleShape2D_dnb3r")

[node name="Killbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killbox"]
position = Vector2(-18, -38)
shape = SubResource("RectangleShape2D_rsxb8")

[node name="CollisionObstacle" type="CollisionShape2D" parent="."]
position = Vector2(-18, -48)
shape = SubResource("RectangleShape2D_pda8s")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_entered" from="Killbox" to="." method="_on_killbox_body_entered"]
